Admin login broken

--- a/templates/demo/adminhome.html
+++ b/templates/demo/adminhome.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Admin Home</h1>
+  <h2>Server Response: {{ response }}</h2>
   <h2>Welcome {{ name }} - New login at {{ time }}</h2>
   <form action="admin/logs" method="post">
     <input type="submit" value="Check logs">
